--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: my-new-service
-  description: Description of my new service
+  name: coforge-idp-service
+  description: First Service for the POC of Coforge-IDP 
   tags:
     - java
   links:
@@ -13,5 +13,5 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: team-a
-  system: project-x
+  owner: Manas Shukla
+  system: project-coforge-idp
