--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,7 +2,9 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: coforge-idp-service
-  description: First Service for the POC of Coforge-IDP 
+  description: First Service for the POC of Coforge-IDP
+  annotations:
+    backstage.io/techdocs-ref: dir:.
   tags:
     - java
   links:
